syntax = "proto3";

import "google/protobuf/empty.proto";

service WalletManagerGRPCService {
  rpc AcquireLock (AcquireLockRequest) returns (AcquireLockResponse);
  rpc ReleaseLock (ReleaseLockRequest) returns (google.protobuf.Empty);
}

message AcquireLockRequest {
  string chain_name = 1;
  optional string address = 2;
  optional uint64 lease_timeout = 3;
  optional uint64 acquire_timeout = 4;
}
message AcquireLockResponse {
  string address = 1;
}

message ReleaseLockRequest {
  string chain_name = 1;
  string address = 2;
}
